tests/syntax_error/dotdotdot_dotdotdot.jou
declare foo(..., ...) -> void  # Error: if '...' is used, it must be the last parameter
